Fixed the font 0size of the footer text to make it look nicer on mobile phones

--- a/src/index.css
+++ b/src/index.css
@@ -208,7 +208,7 @@ footer {
 }
 
 .contact-container {
-  font-size: 2rem;
+  font-size: 1.7rem;
 
   display: flex;
   justify-content: space-around;
